# FITD

./: .gitignore  .ignore  CMakeLists.txt
Fitd/: CMakeLists.txt  fitd.cpp
FitdLib/: AITD1.cpp  AITD1.h  AITD1_Tatou.cpp  AITD2.cpp  AITD2.h  AITD3.cpp  AITD3.h  CMakeLists.txt  JACK.cpp  JACK.h  actorList.cpp  aitdBox.cpp  anim.cpp  anim.h  animAction.cpp  baseTypes.h  bgfxGlue.cpp  bgfxGlue.h  bgfxHandle.cpp  bgfxHandle.h  camera.h  common.h  cosTable.cpp  cosTable.h  debugger.cpp  debugger.h  endianess.h  evalVar.cpp  evalVar.h  fileAccess.cpp  fileAccess.h  floor.cpp  floor.h  fmopl.cpp  font.cpp  font.h  gameTime.cpp  gameTime.h  hqr.cpp  hqr.h  (+46 more)
adlibInTheDark/: CMakeLists.txt  fmopl.h  main.cpp  music.cpp  music.h
cmake/: shader_comp.cmake
include/pakUtil/: buffer.h  pakFile.h  unpack.h
include/sound/: musicPlayer.h
pak/: AITD.cpp  AITD.h  CMakeLists.txt  backgroundFrameBuffer.cpp  backgroundFrameBuffer.h  backgroundView.cpp  backgroundView.h  bgfxHandle.cpp  bgfxHandle.h  bgfxShader.cpp  bgfxShader.h  body.cpp  body.h  bodyView.cpp  bodyView.h  box.h  buffer.h  camera.cpp  camera.h  debugFrameBuffer.h  debugHandle.cpp  debugHandle.h  font.cpp  font.h  foregroundView.cpp  foregroundView.h  frame.cpp  frame.h  frameBuffer.cpp  frameBuffer.h  game.cpp  game.h  imgui_impl_bgfx.cpp  imgui_impl_bgfx.h  introScene.cpp  introScene.h  main.cpp  music.cpp  music.h  osystem.cpp  (+14 more)
pak/AITD/: AITD.cpp  AITD.h  ITD_RESS.h  LISTMUS.cpp  LISTMUS.h  introScene.cpp  introScene.h  resources.h  samples.h  titleScene.cpp  titleScene.h
pak/shaders/: background_ps  body_fs  body_vs  combine_ps  combine_vs  flat.varying.def  flat_ps  flat_vs  font_ps  font_vs  post_fs  shader.ps1  shader.sh  texture_vs
shaderLib/: CMakeLists.txt  embeddedShaders.cpp  embeddedShaders.h  embeddedShadersMacro.h
